# rubicon-poc

./: .gitignore  Cargo.toml  Dockerfile  README.md  aarch64-unknown-linux-none.json  build.zig  build.zig.zon  docker_run_with_release.sh  rust-toolchain.toml  x86_64-unknown-linux-none.json
.cargo/: config.toml
rebuildr/: app-with-tracing.Dockerfile  dotnet.Dockerfile  dotnet.env  dotnet.rebuildr.py  dotnet.with-profiler.env  example-dotnet-app.Dockerfile  example-dotnet-app.rebuildr.py  ld.so.preload  with_profiler.sh  with_tracing.sh
src/: dns.rs  env.rs  http.rs  lib.rs  settings.rs  utils.rs
src/examples/: README  elf_parsing.rs  mod.rs  pipe_handling.rs  tcp_server.rs
src/utils/: envp.rs
weird_helm/: Chart.yaml  values.yaml
weird_helm/binaries/: ld.so.preload
weird_helm/templates/: NOTES.txt  _helpers.tpl  data.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
weird_helm/templates/tests/: test-connection.yaml
