[package]
name = "rubicon-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
rustix = { version = "0.38.31", default-features = false, features = [
    "mount",
    "process",
    "stdio",
    "runtime",
    "system",
    "thread",
    "stdio",
    "fs",
    "alloc",
    "net",
    "pipe",
    "use-explicitly-provided-auxv",
] }
rustix-dlmalloc = { version = "0.1.5", features = ["global"] }
origin = { version = "*", default-features = false, features = [
    "external-start",
    "panic-handler-trap",
    "nightly",
    "thread",
    "alloc",
] }
elf = { git = "https://github.com/cole14/rust-elf.git", default-features = false, features = [
    "alloc",
    "to_str",
] }
bstr = { version = "1.11", default-features = false, features = ["alloc"] }
reqwless = { version = "0.9", default-features = false, features = ["alloc", "embedded-tls"] }
embedded-nal-async = { version = "*" }
embedded-io-async = {version = "*"}
pasts = { version = "0.14", default-features = false }
dns-protocol = { version = "0.1", default-features = false }

thiserror = { version = "2", default-features = false }

serde = { version = "*", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "*", default-features = false, features = ["alloc"] }
lock_api = { version = "0.4", default-features = false, features = [] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lib]
crate-type = ["lib", "cdylib"]
# test = false
# doctest = false
# bench = false